# pipeline_to_3NF

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dags/: jobs_ingest_transform_dag.py
models/: schema.sql
scripts/: __init__.py  ingest_raw.py  transform_to_3nf.py
tests/: test_functions_cleaning.py  test_jobs_integrity.py  test_schema_raw.py
