[project]
name = "iluma_jobs_etl"
version = "0.1.0"
description = "ETL de ofertas de trabajo – Ingesta RAW + Modelo 3 NF"
requires-python = ">=3.11"

[tool.pytest.ini_options]
addopts   = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length    = 100
src            = ["scripts", "tests", "dags"]
exclude        = ["__pycache__", ".venv"]
extend-select  = ["I"]        # Importe sorting (isort rules integradas)
extend-ignore  = ["D401"]     # Ejemplo: docstring en imperativo

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]          # Permitir asserts simples en tests